--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "modern-normalize": "^1.1.0",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
