--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "modern-normalize": "^1.1.0",
+    "mongodb": "^3.6.10",
     "next": "11.0.1",
+    "next-auth": "^3.27.2",
+    "nodemailer": "^6.6.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^0.5.6"
