--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next-auth": "^3.27.2",
     "nodemailer": "^6.6.2",
     "react": "17.0.2",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "17.0.2",
     "swr": "^0.5.6"
   },
