Add fuse.js for a better fuzzy-search in the suggestions.
Moved suggestion items to its own component, add more fields to the
suggestion items and som rough styling.
Changed all components who had a width of 100vw to also have a max
width, to hinder the vertical scrollbar to interfere with styles.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fuse.js": "^6.4.6",
     "modern-normalize": "^1.1.0",
     "mongodb": "^3.6.10",
     "next": "11.0.1",
