--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "fuse.js": "^6.4.6",
     "modern-normalize": "^1.1.0",
     "mongodb": "^3.6.10",
-    "next": "11.0.1",
+    "next": "^11.1.0",
     "next-auth": "^3.27.2",
     "nodemailer": "^6.6.2",
     "react": "17.0.2",
